# agentbuilder-outlook-mcp

./: .env.example  .gitignore  AGENTS.md  AZURE_SETUP.md  FASTMCP_SETUP.md  LICENSE  README.md  fastmcp.json  pyproject.toml  server.py
mcp_outlook/: __init__.py  auth.py  config.py  email.py
scripts/: check_mailbox.py  fastmcp_test.py  test_token_direct.py
tests/: test_auth.py  test_email.py
