[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-outlook"
version = "0.1.0"
description = "FastMCP server scaffold for sending Outlook mail via Microsoft Graph."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.12.4",
    "httpx>=0.28.1,<0.29",
    "pydantic>=2.9,<3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_outlook*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
